Refactor to update status with 2 or more product